--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,13 @@
     <string name="prompt_email">Email ou nom d\'utilisateur</string>
     <string name="prompt_password">Mot de passe</string>
     <string name="action_log_in">go !</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="action_sign_in_short">OK</string>
+    <string name="error_invalid_identifiant">Identifiant invalide</string>
+    <string name="error_invalid_password">Ce mot de passe est trop court</string>
+    <string name="error_incorrect_password">Mot de passe incorrect</string>
+    <string name="error_field_required">Champ obligatoire</string>
+    <string name="permission_rationale">"La permission d'accéder aux contacts est nécessaire pour activer l'auto-complétion d'emails"</string>
     <string name="logo">logo</string>
     <string name="login_page_title">connexion</string>
     <string name="signup_page_title">inscription</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
