--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,12 @@
 
     <!-- Toasts -->
     <string name="error_network_for_login_toast">Erreur : veuillez activer le réseau pour vous connecter</string>
+    <string name="error_network_for_signup_toast">Erreur : veuillez activer le réseau pour vous inscrire</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email ou nom d\'utilisateur</string>
+    <string name="prompt_identifiant">Email ou nom d\'utilisateur</string>
     <string name="prompt_password">Mot de passe</string>
-    <string name="action_log_in">go !</string>
+    <string name="action_login">go !</string>
     <string name="action_sign_in_short">OK</string>
     <string name="error_invalid_identifiant">Identifiant invalide</string>
     <string name="error_incorrect_identifiant">Aucun compte trouvé</string>
@@ -20,4 +21,13 @@
     <string name="logo">logo</string>
     <string name="login_page_title">connexion</string>
     <string name="signup_page_title">inscription</string>
+    <string name="prompt_password_confirm">Mot de passe (4 caractères minimum)</string>
+
+    <!-- Strings related to signup -->
+    <string name="signup_prompt_email">Email</string>
+    <string name="signup_error_invalid_email">Veuillez renseigner un email valide svp</string>
+    <string name="signup_error_invalid_password">Veuillez renseigner un mot de passe svp (4 caractères minimum)</string>
+    <string name="signup_error_missing_password_confirm">Veuillez confirmer votre mot de passe svp</string>
+    <string name="signup_error_invalid_password_confirm">Les mots de passe sont différents</string>
+
 </resources>
