--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,8 @@
     <string name="signup_error_invalid_password">Veuillez renseigner un mot de passe svp (4 caractères minimum)</string>
     <string name="signup_error_missing_password_confirm">Veuillez confirmer votre mot de passe svp</string>
     <string name="signup_error_invalid_password_confirm">Les mots de passe sont différents</string>
+    <string name="action_search">Rechercher</string>
+    <string name="profile">Profil</string>
+    <string name="notifications">Notifications</string>
 
 </resources>
