Add basics for the ConversationsList fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,7 @@
     <string name="action_search">Rechercher</string>
     <string name="profile">Profil</string>
     <string name="notifications">Notifications</string>
+    <string name="conversations_title">conversations</string>
+    <string name="contacts_title">contacts</string>
 
 </resources>
