Add basic list view for conversations list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="home">accueil</string>
     <string name="group_conversations">Conversations de groupe</string>
     <string name="settings">Paramètres</string>
+    <string name="contactpicture">Image du contact</string>
 
 </resources>
