add location feature on ProfileActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="maxime_silva">Maxime Silva</string>
     <string name="maximesilva75_gmail_com">maximesilva75@gmail.com</string>
 
+    <!-- Strings related to location -->
+    <string name="Update_location">Mettre à jour votre position</string>
+
 </resources>
