Clean and fix some thread detail functions + prepare ws for messages writing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -494,6 +494,6 @@
     <!-- Strings related to location -->
     <string name="Update_location">Mettre à jour votre position</string>
     <string name="send_message">send message</string>
-    <string name="votre_message">Votre Message...</string>
+    <string name="votre_message">Votre message…</string>
 
 </resources>
