--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -487,6 +487,7 @@
     <string name="maximesilva75_gmail_com">maximesilva75@gmail.com</string>
     <string name="root_thread_title">discussion</string>
     <string name="threads_title">thèmes</string>
+    <string name="conversation_name">Conversation name\n Thème : theme name</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
