--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -502,5 +502,6 @@
     <string name="move_action">Déplacer</string>
     <string name="rename_action">Renommer</string>
     <string name="new_thread_action">Nouveau thème</string>
+    <string name="thread_title_hint">Titre</string>
 
 </resources>
