--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -505,6 +505,7 @@
     <string name="thread_title_hint">Titre</string>
     <string name="thread_created">Un nouveau thème vient d\'être créé par $user !</string>
     <string name="empty_conversations">Aucune conversation pour le moment !</string>
-    <string name="choose_conversation_members">Participants</string>
+    <string name="new_conversation_header">Nouvelle conversation</string>
+    <string name="conversation_title">Titre (optionnel)</string>
 
 </resources>
